# encrypted-message-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  encrypted-messaging.cabal
src/: API.hs  Client.hs  Encoding.hs  Messaging.hs  Server.hs
test/: Main.hs
test/keys/: alice.private  alice.public  bob.private  bob.public  eve.private  eve.public
